Added a lot of examples to the manuals.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@726 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* man/: Added a lot of examples to the manuals.
+
 2007-04-05  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* man/: Updated parts of the documentation.
