--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-08  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/: Fixed some bugs related to database support.
+
 2007-04-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* man/: Added a lot of examples to the manuals.
