--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,5 +1,7 @@
 2007-04-10  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
+	* man/: Updated documentation.
+
 	* Work/testDb.R: Script to test database stuff.
 
 	* R/: Fixed various database related bugs. Seems to be rather
