--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-11  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* inst/stopwords: Updated stopwords.
+
 2007-04-10  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* man/: Updated documentation.
