Added ISO 639-1 code resolution for languages with available stopwords.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@737 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-15  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/resolve.R (resolveISOCode): Added ISO 639-1 codes for
+	languages with available stopwords.
+
 2007-04-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* inst/doc/tm.Rnw: Minor corrections in the vignette.
