Switched back to filehash instead of filehashSQLite.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@741 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,9 @@
+2007-04-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* DESCRIPTION: Replaced \pkg{filehashSQLite} with \pkg{filehash}
+	due to ongoing problems. For our purposes the latter is as useful
+	as the replaced package.
+
 2007-04-20  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* man/TextDocCol.Rd: Replaced \code{readPlain} with \code{object@DefaultReader}.
