--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-08  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/aobjects.R (StructuredTextDocument): Inherits from
+	TextDocument.
+
 2007-05-04  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/termdocmatrix.R (findFreqTerms): Perform efficient computation
