--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-15  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* man/tmUpdate.Rd: Corrected documentation on readerControl parameter.
+
 2007-05-11  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* man/sFilter.Rd: Corrected documentation on statement format (use
