--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* man/TermDocMatrix.Rd: Fixed documentation on Data slot.
+
 2007-05-19  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/termdocmatrix.R (textvector): Small fix for dealing with empty
