Added replaceWords function.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@755 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-03  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/textdoccol.R (replaceWords): Added method to replace a set of
+	words by a single word. Useful for synonyms.
+
 2007-05-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* man/TermDocMatrix.Rd: Fixed documentation on Data slot.
