Fixed some typos in vignette.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@756 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* inst/doc/tm.Rnw: Fixed some typos in vignette.
+
 2007-06-03  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/textdoccol.R (replaceWords): Added method to replace a set of
