--- a/trunk/tm/TODO
+++ b/trunk/tm/TODO
@@ -4,8 +4,8 @@ TODO:
   - according to Martin Maechler accessing matrix columns is faster
   - naming makes more sense (now we have documents as rows and terms as columns)
 
-* Avoid as.matrix() call in findAssocs for sparse matrices.
-  - we need a working cor() function on sparse matrices.
+* Avoid as.matrix() call in findAssocs for sparse matrices
+  - we need a working cor() function on sparse matrices
 
 * Update vignette to include new features
   - removeSparseTerms()
