--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-15  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* inst/doc/tm.Rnw: Update vignette (readPDF, readHTML, preprocessReut21578XML).
+
 2007-07-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/reader.R (readHTML): Added very simple HTML reader to obtain StructuredTextDocuments.
