Updated TODO list.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@772 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/TODO
+++ b/trunk/tm/TODO
@@ -1,4 +1,5 @@
 TODO:
 
-* Avoid as.matrix() call in findAssocs for sparse matrices
-  - we need a working cor() function on sparse matrices
+* Avoid as.matrix() calls for sparse matrices
+  - in findAssocs / we need a working cor() function on sparse matrices
+  - in dissimilarity / easy once proxy package supports sparse matrices
