Removed manual pdftotext and pdfinfo checks (the system call gives a warning anyway).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@776 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-29  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/reader.R (readPDF): Removed manual checks for pdftotext and
+	pdfinfo. The system call gives a warning anyway.
+
 2007-07-28  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/textdoccol.R (asPlain): Conversion from
