--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-06  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/termdocmatrix.R (termFreq): Correct processing of empty
+	documents.
+
 2007-10-27  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* man/: Updated documentation.
