--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/textdoccol.R (TextDocCol): Fixed bug regarding default reader
+	selection when no reader argument is given.
+
 2008-01-05  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/source.R (CSVSource): Now uses read.csv instead of scan
