Added writeCorpus function.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@819 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-31  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/textdoccol.R (writeCorpus): Function for writing a corpus
+	containing plain text documents to disk.
+
 2008-01-30  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/termdocmatrix.R (TermDocMatrix): Ensure that dimnames are
