git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@821 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/inst/doc/tm.Rnw
+++ b/trunk/tm/inst/doc/tm.Rnw
@@ -192,7 +192,7 @@ documents. E.g.,
 <<eval=false>>=
 lapply(ovid, function(x) writeLines(x, paste(ID(x), ".txt", sep = "")))
 @
-Alternatively there is the function \code{writeCorpus} which
+Alternatively there is the function \code{writeCorpus()} which
 encapsulates this functionality.
 
 \section*{Inspecting the Text Document Collection}
