--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-23  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* man/: Language codes should be in ISO 639-1 format.
+
 2008-01-31  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/textdoccol.R (writeCorpus): Function for writing a corpus
