Commented out faulty code parts (relevant under Windows) in vignette.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@834 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/inst/doc/tm.Rnw
+++ b/trunk/tm/inst/doc/tm.Rnw
@@ -153,7 +153,7 @@ Corpus(DirSource(newsgroup),
 @
 
 \acronym{Rss} feed as delivered by Gmane for the \proglang{R} mailing list archive:
-<<>>=
+<<eval=FALSE>>=
 rss <- system.file("texts", "gmane.comp.lang.r.gr.rdf", package = "tm")
 
 Corpus(GmaneSource(rss),
@@ -161,7 +161,7 @@ Corpus(GmaneSource(rss),
 @
 
 For very simple \acronym{Html} documents:
-<<>>=
+<<eval=FALSE>>=
 html <- system.file("texts", "html", package = "tm")
 
 Corpus(DirSource(html),
