Improved meta data handling. Added coerce method from list to corpus. Updated CITATION file.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@836 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,12 @@
+2008-04-19  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* inst/CITATION: Updated JSS article information.
+
+	* R/textdoccol.R (setAs): Added coerce method from list to
+	corpus.
+
+	* R/meta.R (meta): Improved meta data handling.
+
 2008-03-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/textdoccol.R (materialize, tmMap): Improvements suggested by
