Changed replaceWords to replacePatterns. Suggested by Christian Buchta.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@838 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,10 @@
+2008-04-23  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/transform.R (replacePatterns): Replaced removeWords by
+	replacePatterns. Suggested by Christian Buchta.
+
+	* R/textdoccol.R (inspect): Improved formatting.
+
 2008-04-19  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* inst/CITATION: Updated JSS article information.
