--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,16 @@
+2008-07-24  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/AAA.R (.onLoad, .Last): Start and stop MPI cluster.
+
+	* R/cluster.R: Provide convenience functions for using a MPI
+	cluster.
+
+	* R/termdocmatrix.R (TermDocMatrix): Use MPI cluster if
+	available.
+
+	* R/textdoccol.R (tmIndex, tmFilter, tmMap): Use MPI cluster if
+	available.
+
 2008-07-17  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/textdoccol.R (lapply): Removed debug print out.
