More fine tuning when using a MPI cluster in tm.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@864 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/inst/NEWS
+++ b/trunk/tm/inst/NEWS
@@ -6,5 +6,6 @@ NEW FEATURES
 
     o   The functions tmFilter(), tmIndex(), tmMap() and TermDocMatrix()
         now use a MPI cluster (via the snow and Rmpi packages) if
-        available. Special thanks to Stefan Theussl for his
-        constructive comments.
+        available. Use (de)activateCluster() to manually override
+        cluster usage settings. Special thanks to Stefan Theussl for
+        his constructive comments.
