Introduce name abbreviations for weighting functions.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@865 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-03  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/weight.R: Introduce name abbreviations for weighting functions.
+
 2008-07-24  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/AAA.R (.onLoad, .Last): Start and stop MPI cluster.
