Fixed variable binding warning and signature mismatch in documentation.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@866 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,9 @@
+2008-11-02  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/source.R (getElem): Fix 'no visible binding' warning.
+
+	* man/WeightFunction.Rd: Fix signature.
+
 2008-08-03  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/weight.R: Introduce name abbreviations for weighting functions.
