Sources now have a Length slot. Knowing the length in advance makes corpus construction a lot faster (~ 8 times faster).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@869 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,11 @@
+2008-11-08  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/source.R (Source): Add Length slot.
+
+2008-11-06  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/AAA.R: Unify duplicated .onLoad function.
+
 2008-11-03  Ingo Feinerer  <feinerer@logic.at>
 
 	* DESCRIPTION (Suggests): Added Rmpi.
