--- a/trunk/tm/inst/doc/tm.Rnw
+++ b/trunk/tm/inst/doc/tm.Rnw
@@ -34,7 +34,10 @@ term-document matrices. Our focus is on the main
 aspects of getting started with text mining in \proglang{R}---an in-depth
 description of the text mining infrastructure offered by \pkg{tm} was
 published in the \emph{Journal of Statistical Software} and is available at
-\url{http://www.jstatsoft.org/v25/i05}.
+\url{http://www.jstatsoft.org/v25/i05}. An introductory article
+on text mining in \proglang{R} was published in \emph{R News},
+8(2):19--22, October 2008, and can be obtained at
+\url{http://CRAN.R-project.org/doc/Rnews/}.
 
 \section*{Data Import}
 The main structure for managing documents in \pkg{tm} is a so-called
