Use tryCatch() to handle misconfigured Rmpi installations more gracefully.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@872 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-25  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/AAA.R (.onLoad, .Last): Use tryCatch() to handle misconfigured
+	Rmpi installations more gracefully.
+
 2008-11-08  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/source.R (Source): Add Length slot.
