Code refactoring for sources.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@873 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-27  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/source.R: Refactoring.
+
 2008-11-25  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/AAA.R (.onLoad, .Last): Use tryCatch() to handle misconfigured
