Sort row indices when generating a term-document matrix (fixes a problem with the Matrix package).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@877 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-16  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/termdocmatrix.R (TermDocMatrix): Sort row indices.
+
 2008-12-06  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/source.R (DataframeSource): New source class for data frames.
