Fix off-by-one error in convertMboxEml() function.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@881 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-20  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/preprocess.R (convertMboxEml): Fix off-by-one error.
+
 2008-12-16  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/termdocmatrix.R (TermDocMatrix): Sort row indices.
