The readNewsgroup() reader function can now be configured for
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@882 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-08  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/reader.R (readNewsgroup): The date format is now configurable.
+
 2008-12-20  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/preprocess.R (convertMboxEml): Fix off-by-one error.
