Speed up package loading (Depends -> Suggests).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@886 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,9 @@
+2009-01-29  Ingo Feinerer  <feinerer@logic.at>
+
+	* DESCRIPTION: Speed up package loading (via moving packages not
+	strictly necessary for normal operation to Suggests instead of
+	Depends).
+
 2009-01-08  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/reader.R (readNewsgroup): The date format is now configurable.
