Suppress pointless loading message in vignette.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@893 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-02  Ingo Feinerer  <feinerer@logic.at>
+
+	* inst/doc/tm.Rnw: Suppress pointless loading message.
+
 2009-01-29  Ingo Feinerer  <feinerer@logic.at>
 
 	* DESCRIPTION: Speed up package loading (via moving packages not
