Add pattern and ignore.case arguments to DirSource constructor.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@895 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-10  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/source.R (DirSource): Add pattern and ignore.case arguments
+	which are internally passed over to list.files().
+
 2009-03-02  Ingo Feinerer  <feinerer@logic.at>
 
 	* inst/doc/tm.Rnw: Suppress pointless loading message.
