Add configuration options to readPDF() and readDOC() reader functions.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@903 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,10 @@
+2009-03-20  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/reader.R (readDOC): Options can be passed over to antiword.
+
+	* R/reader.R (readPDF): Options can be passed over to pdfinfo and
+	pdftotext.
+
 2009-03-10  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/source.R (DirSource): Add pattern and ignore.case arguments
