No longer try to start a MPI cluster in .onLoad().
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@904 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/inst/NEWS
+++ b/pkg/inst/NEWS
@@ -2,6 +2,12 @@
 
                 CHANGES IN tm VERSION 0.3-4
 
+SIGNIFICANT USER-VISIBLE CHANGES
+
+    o   .onLoad() no longer tries to start a MPI cluster (which often
+        failed in misconfigured environments). Use activateCluster()
+        and deactivateCluster() instead.
+
 NEW FEATURES
 
     o   The DirSource() constructor now accepts the two new (optional)
