Always use UTC time zone for DateTimeStamps.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@905 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,5 +1,7 @@
 2009-03-21  Ingo Feinerer  <feinerer@logic.at>
 
+	* R/reader.R: Always use UTC time zone.
+
 	* R/AAA.R (.onLoad): No longer try to start a MPI cluster.
 
 2009-03-20  Ingo Feinerer  <feinerer@logic.at>
