Sources now can be vectorized.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@909 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-22  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/source.R (Source): New slot Vectorized.
+
 2009-03-21  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/reader.R (readCustom): Experimental reader which can be
