CSVSource is defunct.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@910 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/inst/NEWS
+++ b/pkg/inst/NEWS
@@ -28,6 +28,10 @@ NEW FEATURES
     o   Sources now can be vectorized. This allows faster corpus
         construction.
 
+DEPRECATED & DEFUNCT
+
+    o   CSVSource is defunct (use DataframeSource instead).
+
                 CHANGES IN tm VERSION 0.3-3
 
 NEW FEATURES
